# BuildersGate

./: .gitignore  README.md  pyproject.toml
bgate_adapters/: __init__.py  _blender_runner.py  _blender_sprites.py  _whisper_runner.py  blender.py  godot.py  imagegen.py  recorder.py  sprites.py  transcribe.py
bgate_cli/: __init__.py  hook.py  main.py
bgate_core/: __init__.py  activity.py  artifacts.py  assets.py  bible.py  canon.py  db.py  envfile.py  feedback.py  iterations.py  lore.py  playtest.py  project.py  queue.py  refs.py  scaffold.py  search.py  seats.py  util.py
bgate_mcp/: __init__.py  server.py
bgate_ui/: __init__.py  __main__.py  app.py  dispatch.py  webbuild.py
bgate_ui/static/: index.html
docs/: character-consistency.md  gap-analysis.md  magic.md
templates/2d/: project.godot
templates/2d/scenes/: main.tscn
templates/2d/scripts/: player.gd
templates/3d/: project.godot
templates/3d/scenes/: main.tscn
templates/3d/scripts/: player.gd
templates/shared/addons/bgate/: bgate_telemetry.gd
tests/: conftest.py  test_artifacts.py  test_assets.py  test_blender.py  test_bridge.py  test_canon.py  test_core.py  test_feedback.py  test_godot.py  test_hook.py  test_imagegen.py  test_iterations.py  test_mcp_server.py  test_playtest.py  test_queue.py  test_refs.py  test_scaffold.py  test_seats.py  test_sprites.py  test_transcribe.py  test_ui.py
