[project]
name = "builders-gate"
version = "0.1.0"
description = "Agentic game development pipeline — design bible, lore canon, and DCC/engine adapters over MCP."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
stt = ["faster-whisper>=1.0"]
record = ["sounddevice>=0.4", "numpy>=1.26"]

[project.scripts]
bgate = "bgate_cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bgate_core", "bgate_mcp", "bgate_adapters", "bgate_cli", "bgate_ui"]

[tool.setuptools.package-data]
bgate_ui = ["static/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: hits real Blender/whisper — deselect with -m 'not slow'",
]
